Use database query instead of VersionService
- Use database query instead of VersionService
- Add methods from RepositoryService to RepositoryServiceSmokeTest
- Align version ordering
- Always return a namespace display name
- Fix unittests